--- a/web1/src/app/inventory/pre-order/pre-order.component.html
+++ b/web1/src/app/inventory/pre-order/pre-order.component.html
@@ -137,7 +137,7 @@
                                             (click)="displayAddField(i)">
                                             <mat-icon class="col-white plus_icon">add</mat-icon>
                                         </button>
-                                        <button [disabled]="spec.SelectedValue === ''" mat-mini-fab color="primary" *ngIf="spec.DisplayAdd === 1"
+                                        <button  mat-mini-fab color="primary" *ngIf="spec.DisplayAdd === 1"
                                             (click)="saveFieldData(i)"
                                             aria-label="Example icon button with a bookmark icon">
                                             <mat-icon>save</mat-icon>
