--- a/web1/src/app/admin/product-manage/product-manage.component.html
+++ b/web1/src/app/admin/product-manage/product-manage.component.html
@@ -49,7 +49,7 @@
                                             [disabled]="disbleProduct" #GSTTypecontrol>
                                             <mat-option value="None">None</mat-option>
                                             <mat-option value="IGST">IGST</mat-option>
-                                            <mat-option value="CGST-SGST">CGST-IGST</mat-option>
+                                            <mat-option value="CGST-SGST">CGST-SGST</mat-option>
                                         </mat-select>
                                     </mat-form-field>
                                 </div>
@@ -108,7 +108,7 @@
                                
                                 <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                     <button *ngIf="hideSave" mat-mini-fab color="primary"
-                                        (click)="showAdd = !showAdd;  saveProduct();" [disabled]="!f2.valid || GstTypeDis">
+                                        (click)="showAdd = !showAdd;  saveProduct();" [disabled]="GstTypeDis">
                                         <mat-icon>save</mat-icon>
                                     </button>
                                 </div>
