--- a/web1/src/app/product/product-master/product-master.component.html
+++ b/web1/src/app/product/product-master/product-master.component.html
@@ -62,7 +62,7 @@
                                         (click)="deleteSpecValue(spec, spec.SelectedValue, i)">
                                         <mat-icon class="delete_icon me-2 ms-2">delete_forever</mat-icon>
                                     </button>
-                                    <button type="button" [disabled]="spec.SelectedValue === ''" mat-mini-fab color="primary" *ngIf="spec.DisplayAdd === 1"
+                                    <button type="button"  mat-mini-fab color="primary" *ngIf="spec.DisplayAdd === 1"
                                         (click)="saveFieldData(i)"
                                         aria-label="Example icon button with a bookmark icon">
                                         <mat-icon>save</mat-icon>
